[package]

name = "cascade"
version = "0.0.1"
authors = ["Sebastian Lauwers <sebastian.lauwers@gmail.com>"]

[dependencies]
toml = "0.1"
stainless = "0.0.14"
log = "0.2.4"
env_logger = "0.2.2"
time = "0.1.17"

[dependencies.argparse]
git = "https://github.com/teotwaki/rust-argparse.git"
branch = "nightly-peekable"
