[package]

name = "cascade"
version = "0.0.1"
authors = ["Sebastian Lauwers <sebastian.lauwers@gmail.com>"]

[dependencies]
toml = "0.1"
stainless = "0.0.14"
log = "0.2.4"
env_logger = "0.2.2"
time = "0.1.17"

[dependencies.argparse]
git = "https://github.com/tailhook/rust-argparse.git"
branch = "rust-nightly"

[dependencies.mio]
git = "https://github.com/carllerche/mio.git"
